修改路径配置及配置静态资源别名

--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 # base api
-VUE_APP_BASE_API = 'http://localhost:8089/myblog/images/'
-VUE_APP_IMAGES = 'http://localhost:3000'
+VUE_APP_IMAGES = 'http://localhost:8089/myblog/images/'
+VUE_APP_BASE_API = 'http://localhost:3000'
 # just a flag
 ENV = 'development'
 NODE_ENV = development
