--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 # base api
-VUE_APP_BASE_API = 'http://localhost:8089/myblog/images/'
-VUE_APP_IMAGES = 'http://localhost:3000'
+VUE_APP_IMAGES = 'http://120.79.24.96/myblog/images/'
+VUE_APP_BASE_API = 'http://120.79.24.96:3000'
 # just a flag
 ENV = 'production'
 NODE_ENV = production
